apps/stork/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stork
  namespace: network-services
spec:
  parentRefs:
    - {name: home, namespace: traefik}
  hostnames: [stork.reza.network]
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: custom-errors
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: lan-vpn-only
      backendRefs:
        - {name: stork-server, port: 80}
